# stingray-controller

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  jest.config.js  package.json
.github/actions/: run_zlib_download.py
.github/actions/set-up-controller/: action.yaml
.github/actions/set-up-langs/: action.yaml
.github/workflows/: build-publish.yaml  dev-test.yaml  run_zlib_download.py  s3_publish.js
.github/workflows/set-up-controller/: action.yaml
controller/: .flake8  build.py  build2.py  entrypoint.py  mypy.ini  pyinstaller.spec  pyproject.toml  pytest.ini  setup.py
controller/src/: constants.py  exceptions.py
controller/src/controller/: __init__.py  constants.py  exceptions.py  main.py
controller/src/controller/main_process/: instrument_comm.py  server.py  subprocess_monitor.py
controller/src/controller/main_systems/: server.py  system_monitor.py
controller/src/controller/subsystems/: cloud_comm.py  file_writer.py  instrument_comm.py
controller/src/controller/utils/: aio.py  command_tracking.py  commands.py  data_parsing_cy.pyx  files.py  generic.py  logging.py  mpq_async_wrapper.py  serial_comm.py  state_management.py  stimulation.py  validation.py
controller/src/main_process/: subprocess_monitor.py
controller/src/utils/: mpq_async_wrapper.py
controller/tests/: client.py  conftest.py  fixtures.py  helpers.py  test_exe.py  test_main.py
controller/tests/main_systems/: test_server.py
controller/tests/subsystems/: test_instrument_comm.py
controller/tests/utils/: test_command_tracking.py  test_serial_comm.py  test_stimulation.py
electron/: jest.config.js  package-lock.json  package.json  s3_publish.js  s3_publish.py
electron-builder-config/: prod.yaml  unstable.yaml
electron/.electron-nuxt/renderer/: nuxt.config.js
electron/electron-builder-config/: prod.yaml  unstable.yaml
electron/main/: BrowserWinHandler.js  index.js  utils.js
electron/renderer/: nuxt.config.js
electron/renderer/layouts/: default.vue
electron/renderer/pages/: heatmap.vue  index.vue  platemapeditor.vue  stimulationstudio.vue
electron/renderer/store/: index.js
src/: entrypoint.py
src/controller/: constants.py  main.py
src/controller/main_process/: server.py  subprocess_monitor.py
src/controller/utils/: generic.py  mpq_async_wrapper.py
src/electron/main/: index.js  utils.js
src/electron/renderer/: nuxt.config.js
src/electron/renderer/layouts/: default.vue
src/ui/store/modules/playback/: mutations.js
src/ui/store/plugins/: websocket.js
tests/controller/: client.py
ui/: index.js  nuxt.config.js  package-lock.json  package.json  vue.config.js
ui/components/basic-widgets/: ButtonWidget.vue  CheckBoxWidget.vue  InputDropDown.vue  InputWidget.vue  PlateWell.vue  SelectDropDown.vue  SmallDropDown.vue  StimulationStudioPlateWell.vue  ToggleWidget.vue
ui/components/basic_widgets/: SelectDropDown.vue
ui/components/plate-based-widgets/stimulationstudio/: StimulationStudioWidget.vue
ui/components/plate_based_widgets/stimulationstudio/: StimulationStudioWidget.vue
ui/components/playback/controls/: BarcodeViewer.vue  StimulationControls.vue
ui/components/settings/: AddUser.vue  EditUser.vue  SettingsButton.vue  SettingsForm.vue
ui/components/status/: BarcodeViewer.vue  ErrorCatchWidget.vue  SimulationMode.vue  StatusBar.vue  StatusSpinnerWidget.vue  StatusWarningWidget.vue  StimQCSummary.vue
ui/components/stimulation/: StimulationStudio.vue  StimulationStudioBlockViewEditor.vue  StimulationStudioColorModal.vue  StimulationStudioControls.vue  StimulationStudioCreateAndEdit.vue  StimulationStudioDelayModal.vue  StimulationStudioDragAndDropPanel.vue  StimulationStudioInputModal.vue  StimulationStudioPlateWell.vue  StimulationStudioProtocolViewer.vue  StimulationStudioWaveform.vue  StimulationStudioWaveformSettingModal.vue  StimulationStudioWidget.vue  StimulationStudioZoomControls.vue
ui/components/system/controls/: BarcodeViewer.vue  StimulationControls.vue
ui/js-utils/: LabwareCalculations.js  ProtocolValidation.js  TextValidation.js  WaveformDataFormatter.js
ui/js_utils/: text_validation.js  waveform_data_formatter.js
ui/layouts/: default.vue
ui/pages/status/: error-catch-basic.vue  error-catch-new.vue
ui/pages/status/error-catch/: error-catch-ws.vue
ui/pages/stimulation/: basic.vue  create-and-edit.vue
ui/store/: index.js
ui/store/modules/data/: actions.js  index.js  mutations.js
ui/store/modules/flask/: actions.js  index.js  mutations.js  url_regex.js
ui/store/modules/platemap/: actions.js
ui/store/modules/playback/: actions.js  getters.js  index.js  mutations.js
ui/store/modules/settings/: actions.js  enums.js  index.js  mutations.js
ui/store/modules/stimulation/: actions.js  enums.js  getters.js  index.js  mutations.js
ui/store/modules/system/: actions.js  enums.js  getters.js  index.js  mutations.js
ui/store/plugins/: websocket.js
ui/tests/: setup.js
ui/tests/sample-stim-protocols/: stim-protocols.js
ui/tests/unit/components/basic-widgets/: ButtonWidget.spec.js  CheckBoxWidget.spec.js  InputDropDown.spec.js  InputWidget.spec.js  PlateWell.spec.js
ui/tests/unit/components/basic_widgets/: ButtonWidget.spec.js  CheckBoxWidget.spec.js  InputDropDown.spec.js  InputWidget.spec.js  PlateWell.spec.js  RadioButtonWidget.spec.js  StimulationStudioPlateWell.spec.js  ToggleWidget.spec.js
ui/tests/unit/components/plate_based_widgets/: StimulationStudioWidget.spec.js
ui/tests/unit/components/settings/: AddUser.spec.js  (+6 more)
ui/tests/unit/js-utils/: LabwareCalculations.spec.js  TextValidation.spec.js
ui/tests/unit/js_utils/: labware_calculations.spec.js  text_validation.spec.js  waveform_data_formatter.spec.js  waveform_lambda_formatter.spec.js
ui/tests/unit/store/: data.spec.js  flask.spec.js  settings.spec.js  stimulation.spec.js  system.spec.js  websocket.spec.js
virtual-instrument/: requirements.txt
virtual-instrument/src/: entrypoint.py
virtual-instrument/src/virtual_instrument/: TODO.py  constants.py  exceptions.py  serial_comm.py  stimulation.py  virtual_instrument.py
(+19 files in other folders)
