[tool.poetry]
name = "controller"
version = "0.1.0"
description = "Windows Desktop App for viewing and recording data from a Stingray Instrument."
authors = ["Curi Bio <contact@curibio.com>"]
license = "MIT"
packages = [
    { include = "controller", from = "src" }
]
build = "build.py"

[tool.poetry.dependencies]
python = "~3.10.8"

aioserial = "1.3.1"
Cython = "0.29.33"
immutabledict = "2.2.3"
labware-domain-models = "0.3.1"
numpy = "1.24.2"
# psutil = "5.9.4"
# pulse3d = "0.30.0"
pyserial = "3.5"
# semver = "2.13.0"
stdlib-utils = "0.5.2"
# streamz = "0.6.4"
# wakepy = "0.5.0"
websockets = "10.4"

[tool.poetry.group.dev.dependencies]
aioconsole = "0.6.0"
# boto3 = "1.26.78"
# click = "8.0.3"  # Tanner (4/11/22): pinned for black
freezegun = "1.2.2"
# pefile = "2023.2.7" # Tanner (2/24/23): this must be explicitly specified so that it will be included in a Windows build environment
pre-commit = "3.1.1"
# pyinstaller = "5.8.0"
pytest = "7.2.1"
pytest-asyncio = "0.20.3"
pytest-cov = "4.0.0"
pytest-mock = "3.10.0"
pytest-profiling = "1.7.0"
pytest-randomly = "3.12.0"
pytest-timeout = "2.1.0"
# pywin32-ctypes = "0.2.0" # Tanner (2/24/23): this must be explicitly specified so that it will be included in a Windows build environment

[build-system]
requires = ["poetry-core", "setuptools", "Cython", "numpy"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.10"
warn_unused_configs = true  # Report any config options that are unused by mypy. (This will help us catch typos when making changes to our config file).
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
strict_equality = true
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "--cov=controller --cov-report html --cov-branch --cov-report term-missing:skip-covered --cov-fail-under=100"
markers = [
    "only_run_in_ci",  # marks tests that only need to be run during full Continuous Integration testing environment (select to run with '--full-ci' if conftest.py configured)
    "slow",  # marks tests that take a bit longer to run, but can be run during local development (select to run with '--include-slow-tests' if conftest.py configured)
    "only_exe",  # marks tests that CAN only be run with the compiled .exe (select to run with '--only_exe' if conftest.py configured. This will also only run tests with this marker)
]
