[tool.poetry]
name = "controller"
version = "0.1.0"
description = "Windows Desktop App for viewing and recording data from a Stingray Instrument."
authors = ["Curi Bio <contact@curibio.com>"]
license = "MIT"
packages = [
    { include = "controller", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.11.3"

httpx = "0.24.1"
aioserial = "1.3.1"
Cython = "0.29.34"
immutabledict = "2.2.3"
jsonschema = "4.17.3"  # Tanner (7/7/23): pinning this to avoid issues with pyinstaller. Can probably remove this dependency entirely once labware-domain-models is removed
labware-domain-models = "0.3.1"
numpy = "1.23.5"  # pinned for pulse3d
pulse3d = "0.33.10"
pyserial = "3.5"
semver = "2.13.0"
stdlib-utils = "0.5.2"
websockets = "10.4"

[tool.poetry.group.dev.dependencies]
aioconsole = "0.6.0"
freezegun = "1.2.2"
pre-commit = "3.1.1"
pyinstaller = "5.13.0"
pytest = "7.2.1"
pytest-asyncio = "0.20.3"
pytest-cov = "4.0.0"
pytest-mock = "3.10.0"
pytest-profiling = "1.7.0"
pytest-randomly = "3.12.0"
pytest-timeout = "2.1.0"
setuptools = ">=70.0.0"

[build-system]
requires = ["poetry-core", "setuptools", "Cython", "numpy"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.11"
warn_unused_configs = true  # Report any config options that are unused by mypy. (This will help us catch typos when making changes to our config file).
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
strict_equality = true
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "--cov=controller --cov-report html --cov-branch --cov-report term-missing:skip-covered --cov-fail-under=45"
markers = [
    "only_run_in_ci",  # marks tests that only need to be run during full Continuous Integration testing environment (select to run with '--full-ci' if conftest.py configured)
    "slow",  # marks tests that take a bit longer to run, but can be run during local development (select to run with '--include-slow-tests' if conftest.py configured)
    "only_exe",  # marks tests that CAN only be run with the compiled .exe (select to run with '--only_exe' if conftest.py configured. This will also only run tests with this marker)
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false
